2003-08-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (Executable.Spawn): Remove __has_*_run variables.
	(Executable._InitializeParent): Likewise.
	(Executable._HandleChild): Likewise.
	(Executable._InitializeChild): Likewise.
	(Executable._DoParent): Likewise.
	* qm/platform_win32.py (get_user_name): Remove.
	* qm/platform_unix.py (send_email): Remove.
	(get_user_name): Remove.
	* qm/regression_test.py: Remove file.	
	
	* qm/test/doc/reference.xml (Field Classes): Fix typo.

	* qm/test/file_result_stream.py (FileResultStream.__init__): Fix
	indentation.
	
2003-08-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (TimeoutExecutable._HandleChild): Close all
	fds in the monitor process.
	* tests/xmldb/test.qms/classes.qms/scripttest_closes_stdin.qmt:
	New test.
	
2003-08-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (RedirectedExecutable._InitializeChild): Fix
	indentation.

2003-08-14  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (TimeoutExecutable.__init__): Document -2 value
	for timeout.
	(TimeoutExecutable._InitializeChild): Create the monitor pid in
	the -2 case as well.
	(TimeoutExectuable.Run): Kill the entire process group, not just
	the monitor pid.
	(TimeoutExectuable.__UseSeparateProcessGroupForChild): New
	method.
	(Filter.__init__): Adjust documentation of timeout parameter.
	* qm/test/classes/command.py (ExecTestBase.RunProgram): Pass -2 to
	Filter when no timeout is specified.

2003-08-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (Executable._MakeCloseOnExec): New function.
	(Executable.Run): Use it.
	(RedirectedExecutable._CreatePipe): Use it; document that fds
	will be closed on exec.
	(RedirectedExecutable._InitializeChild): Close all pipe fd's.

2003-08-13  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (Executable): Typo in docstring.

2003-08-12  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/text_result_stream.py